# ismr_downloader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  lint.yml  release.yml
ismr_downloader/: __init__.py  __main__.py  auth.py  client.py  downloader.py  utils.py
